# nheengatu

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: config.rs  interactive.rs  languages.rs  main.rs  progress.rs
core/: Cargo.toml
core/src/: book.rs  chunker.rs  epub_parser.rs  epub_writer.rs  lib.rs  pipeline.rs  storage.rs  translator.rs
docs/: monitoring.md  schema.sql  upload-flow.md
examples/: metamorphosis.epub  the-yellow-wallpaper.epub
tests/fixtures/: test.epub
tools/: eval_level.py  run_tests.sh
web/: Cargo.toml  README.md
web/src/: app_state.rs  config.rs  main.rs
web/src/middleware/: auth.rs
web/src/routes/: auth.rs  jobs.rs  mod.rs  pages.rs  payment.rs  upload.rs
web/src/services/: mod.rs  pricing.rs  supabase.rs  vouchers.rs
web/templates/: base.html  dashboard.html  landing.html  login.html  signup.html  upload.html
