[package]
name = "gunnlod-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for translating and simplifying EPUB books to a target CEFR level"
license = "MIT"
repository = "https://github.com/pdrgds/gunnlod"
keywords = ["epub", "translation", "llm", "cefr", "language-learning"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "gunnlod"
path = "src/main.rs"

[dependencies]
gunnlod-core = { path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
