[package]
name = "nheengatu-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for translating and simplifying EPUB books to a target CEFR level"
license = "MIT"
repository = "https://github.com/pdrgds/nheengatu"
keywords = ["epub", "translation", "llm", "cefr", "language-learning"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "nheengatu"
path = "src/main.rs"

[dependencies]
nheengatu-core = { path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
dirs = "6"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
