[package]
name = "gunnlod-core"
version = "0.1.0"
edition = "2021"
description = "Translate and simplify EPUB books to a target CEFR language level using an LLM"
license = "MIT"
repository = "https://github.com/pdrgds/gunnlod"
keywords = ["epub", "translation", "llm", "cefr", "language-learning"]
categories = ["text-processing", "internationalization"]
exclude = ["../web", "../docs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
epub = "2"
epub-builder = "0.7"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
zip = "2.3"
