[package]
name = "gunnlod-web"
version = "0.1.0"
edition = "2021"

[dependencies]
gunnlod-core = { path = "../core" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
askama = "0.12"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors", "limit"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tempfile = "3"
dotenvy = "0.15"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
